# cargo-workspaces-fork

./: CHANGELOG.md  README.md
cargo-workspaces/: Cargo.toml
cargo-workspaces/src/: changed.rs  create.rs  exec.rs  list.rs  main.rs  publish.rs  rename.rs  version.rs
cargo-workspaces/src/utils/: cargo.rs  changable.rs  config.rs  dag.rs  error.rs  git.rs  listable.rs  mod.rs  pkg.rs  version.rs
fixtures/crate-conflict/: Cargo.toml
fixtures/crate-conflict/bar/: Cargo.toml  README.md
fixtures/crate-conflict/foo/: Cargo.toml
fixtures/crate-conflict/syn/: Cargo.toml
fixtures/inheritance/: Cargo.toml  README.md
fixtures/inheritance/crates/bar/: Cargo.toml
fixtures/inheritance/crates/common/: Cargo.toml
fixtures/inheritance/crates/foo/: Cargo.toml
fixtures/inheritance/crates/foobar/: Cargo.toml
fixtures/self-inherited/: Cargo.toml  README.md
fixtures/self-inherited/crates/bar/: Cargo.toml
fixtures/self-inherited/crates/common/: Cargo.toml
fixtures/self-inherited/crates/foo/: Cargo.toml
fixtures/self-inherited/crates/foobard/: Cargo.toml
fixtures/self-inherited/crates/syn/: Cargo.toml
