[package]
name = "foobar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foo.workspace = true
bar.workspace = true
common.workspace = true

[workspace]
members = ["crates/foo", "crates/bar", "crates/common", "crates/foobard"]

[workspace.dependencies]
foobar = { path = "." }
foo = { path = "./crates/foo" }
bar = { path = "./crates/bar" }
common = { path = "./crates/common", package = "libcommon" }
