[package]
name = "foobar"
version = "0.1.0"
authors = ["Miraculous Owonubi <omiraculous@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2"
foo.workspace = true
bar.workspace = true
common.workspace = true

[workspace]
members = [
  "crates/foo",
  "crates/bar",
  "crates/common",
  "crates/foobard",
  "crates/syn",
]

[workspace.dependencies]
foobar = { path = "." }
foo = { path = "./crates/foo" }
bar = { path = "./crates/bar" }
common = { path = "./crates/common", package = "libcommon" }
syn = { path = "./crates/syn" }

[[workspace.metadata.workspaces.group]]
name = "foo-and-bar"
members = ["crates/foo", "crates/bar"]
