[package]
name = "foobar"
version = "0.1.1"
authors = ["Miraculous Owonubi <omiraculous@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2"
foo.workspace = true
bar.workspace = true
common.workspace = true

[workspace]
members = [
  "crates/foo",
  "crates/bar",
  "crates/common",
  "crates/foobard",
  "crates/syn",
]

[workspace.dependencies]
foobar = { path = ".", version = "0.1.1" }
foo = { path = "./crates/foo", version = "0.2.0" }
bar = { path = "./crates/bar", version = "0.2.0" }
common = { path = "./crates/common", package = "libcommon", version = "0.1.1" }
syn = { path = "./crates/syn", version = "0.1.1" }

[[workspace.metadata.workspaces.group]]
name = "foo-and-bar"
members = ["crates/foo", "crates/bar"]
